# aoc

./: azure-pipelines-1.yml  azure-pipelines.yml
2020/CPP/: adventofcode-batch.sh
2020/CPP/01/: CMakeLists.txt  adventofcode-01  adventofcode-01.cpp
2020/CPP/02/: CMakeLists.txt  adventofcode-02  adventofcode-02.cpp  adventofcode-02.h  main.cpp
2020/CPP/03/: CMakeLists.txt  adventofcode-03  adventofcode-03.cpp  adventofcode-03.h  main.cpp
2020/CPP/04/: CMakeLists.txt  adventofcode-04  adventofcode-04.cpp  adventofcode-04.h  lib.cpp  lib.h  main.cpp
2020/Python/: adventofcode-01.py  adventofcode-02.py  adventofcode-03.py  adventofcode-04.py  adventofcode-05.py  adventofcode-06.py  adventofcode-07.py  adventofcode-08.py  adventofcode-09.py  adventofcode-10.py  adventofcode-11.py  adventofcode-12.py  adventofcode-13.py  adventofcode-14.py  adventofcode-15.py  adventofcode-16.py  adventofcode-17.py  adventofcode-18.py  adventofcode-19.py  helper.py
2021/Python/: 15.txt  16.txt  aoc-2021-01.py  aoc-2021-02.py  aoc-2021-03.py  aoc-2021-04.py  aoc-2021-05.py  aoc-2021-06.py  aoc-2021-07.py  aoc-2021-08.py  aoc-2021-11.py  aoc-2021-13.py  aoc-2021-14.py  aoc-2021-15.py  aoc-2021.yaml  helper.py
